--- a/scss/main.css
+++ b/scss/main.css
@@ -100,7 +100,7 @@
 .menu-branding .portrait {
   width: 250px;
   height: 250px;
-  background: url(../img/portrait2.jpg);
+  background: url(../img/portrait2.jpg) no-repeat center top;
   border-radius: 50%;
   border: solid 3px #eece1a;
 }
@@ -439,7 +439,7 @@ main#home h1 {
             transform: translate3d(100%, 0, 0);
   }
   .menu-branding .portrait {
-    background: url("../img/img-6.jpg");
+    background: url("/dist/img/portrait_small2.jpg")center top;
     width: 150px;
     height: 150px;
   }
